# rockcraft

./: .bumpversion.cfg  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .pylintrc  .readthedocs.yaml  .readthedocs.yml  CONTRIBUTING.md  CONTRIBUTING.rst  HACKING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  common.mk  osv-scanner.toml  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-jammy.txt  requirements-noble.txt  requirements.txt  rockcraft.yaml  setup.cfg  setup.py  spread.yaml  tox.ini
.github/: .jira_sync_config.yaml  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  release-drafter.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug.yaml  docs.yaml
.github/scripts/: requirements.txt  schema.py
.github/workflows/: check-renovate.yaml  labeler.yml  policy.yaml  qa.yaml  release-drafter.yml  release-publish.yaml  rockcraft-rock.yaml  schema.yaml  security-scan.yaml  snap.yaml  spread-docs.yaml  spread-large.yaml  spread-manual.yaml  spread.yaml  tests.yaml  tics.yaml
docs/: .custom_wordlist.txt  .wordlist.txt  Makefile  README.md  README.rst  about-this-documentation.rst  conf.py  contribute-to-this-documentation.rst  explanation.rst  howto.rst  index.rst  links.txt  redirects.txt  reference.rst  requirements.txt  spellingcheck.yaml  tutorials.rst
docs/.sphinx/: get_vale_conf.py  update_sp.py
docs/_dev/: update_sp.py
docs/_static/: github_issue_links.js  header-nav.js
docs/_static/css/: cookie-banner.css  custom.css
docs/_static/js/: overwrite_links.js
docs/explanation/: Ubuntu-Pro-Integration.rst  bases.rst  chisel.rst  cryptography.rst  index.rst  lifecycle-layer.rst  overlay-step.rst  pebble.rst  rockcraft.rst  rocks.rst  steps.rst  usrmerge.rst
docs/explanation/extensions/: expressjs-framework.rst  index.rst
docs/how-to/: build-a-12-factor-app-rock.md  build-a-12-factor-app-rock.rst  build-docs.rst  change-from-ubuntu2404-to-ubuntu2604.rst  configure-the-build-base-for-an-expressjs-app.rst  configure-the-build-base-for-expressjs-app.rst  contribute-docs.rst  convert-to-pebble-layer.rst  create-slice.rst  dockerfile-to-rock.rst  get-started.rst  index.rst  install-slice.rst  manage-12-factor-app-rock.rst  migrate-to-chiselled-rock.rst  outsource-rock-builds-to-launchpad.rst  publish-a-rock.rst  publish-slice.rst  rockcraft-pack-action.rst  specify-a-base.rst  use-chisel.rst  use-django-extension.rst  use-flask-extension.rst
docs/how-to/rocks/: index.rst  (+14 more)
docs/reference/: changelog.rst  commands.rst  extensions.rst  index.rst  part_properties.rst  parts-and-steps.rst  parts.rst  parts_steps.rst  plugins.rst  remote-build.rst  remote-builds.rst  rockcraft-yaml.rst  rockcraft.yaml.rst
docs/release-notes/: index.rst  rockcraft-1-10-0.rst  rockcraft-1-10.rst  rockcraft-1-11.rst  rockcraft-1-12.rst  rockcraft-1-13.rst  rockcraft-1-14.rst  rockcraft-1-15.rst  rockcraft-1-16.rst  rockcraft-1-17.rst  rockcraft-1-18.rst  rockcraft-1-19.rst  rockcraft-1-20.rst  rockcraft-1-7-0.rst  rockcraft-1-7.rst  rockcraft-1-8-0.rst  rockcraft-1-8.rst  rockcraft-1-9-0.rst  rockcraft-1-9.rst
docs/reuse/: links.txt
docs/tutorial/: add-parts.rst  baseless-rock.rst  chisel.rst  django.rst  express.rst  expressjs.rst  fastapi.rst  flask.rst  go.rst  hello-world.rst  index.rst  install-packages.rst  node-app.rst  pypi-package.rst  rootless-rock.rst  springboot.rst
docs/tutorials/: chisel.rst  convert-rock-to-docker-image.rst  getting-started-with-flask.rst  getting-started-with-rockcraft-for-flask.rst  hello-world.rst  index.rst  migrate-to-chiselled-rock.rst  node-app.rst  publish-a-rock.rst  pypi-package.rst
extensions/django-framework/: async-gunicorn.conf.py  gunicorn.conf.py  statsd-mapping.conf
extensions/flask-framework/: async-gunicorn.conf.py  gunicorn.conf.py  statsd-mapping.conf
rockcraft/: __init__.py  __main__.py  application.py  apt_update_part.py  architectures.py  bases.py  cli.py  constants.py  environment.py  errors.py  layers.py  lifecycle.py  oci.py  parts.py  pebble.py  project.py  providers.py  sitecustomize.py  ui.py  usernames.py  utils.py
rockcraft/commands/: __init__.py  extensions.py  init.py  lifecycle.py  remote.py
rockcraft/data/: ubuntu.json
rockcraft/extensions/: __init__.py  _constants.py  _python_utils.py  _utils.py  app_parts.py  express.py  expressjs.py  extension.py  extension_flask.py  fastapi.py  flask.py  flask_framework.py  framework_flask.py  go.py  gunicorn.py  paas_flask.py  registry.py  spring_boot.py  springboot.py
rockcraft/models/: __init__.py  project.py
rockcraft/plugins/: __init__.py  ant_plugin.py  docker_plugin.py  groups.py  java_common.py  jlink_plugin.py  maven_plugin.py  poetry_plugin.py  python_common.py  python_plugin.py  register.py  uv_plugin.py
rockcraft/providers/: __init__.py  _buildd.py  _get_provider.py  _logs.py  _lxd.py  _multipass.py  _provider.py  providers.py
rockcraft/services/: __init__.py  image.py  init.py  lifecycle.py  package.py  project.py  provider.py  remotebuild.py  service_factory.py
schema/: rockcraft.json
schemas/: rockcraft.json  rockcraft_schema.json
snap/: snapcraft.yaml
snap/hooks/: configure  remove
tests/: __init__.py  conftest.py  util.py
tests/integration/: conftest.py  test_application.py  test_lifecycle.py  test_oci.py  test_parts.py
tests/integration/plugins/python_source/: pyproject.toml
tests/integration/plugins/python_source/poetry/: setup.py
tests/integration/plugins/python_source/python/: setup.py
tests/integration/plugins/python_source/uv/: pyproject.toml
tests/testing/: lifecycle.py  project.py
tests/unit/: conftest.py  test_application.py  test_cli.py  test_layers.py  test_lifecycle.py  test_oci.py  test_parts.py  test_pebble.py  test_project.py  test_providers.py  test_ui.py  test_usernames.py  test_utils.py
tools/: freeze-requirements.sh  mkdoclinks.sh  update-release-data.py
tools/docs/: gen_cli_docs.py
tools/rock/: rockcraft-entrypoint.sh
tools/schema/: schema.py
tools/spread/: grep_docker_log  install_rockcraft  run_rockcraft  setup_maven_proxy
(+564 files in other folders)
