[metadata]
name = rockcraft
version = attr: rockcraft.__version__
description="Create rocks"
long_description = file: README.rst
url = https://github.com/canonical/rockcraft
project_urls =
    Documentation = https://rockcraft.readthedocs.io/en/latest/
    Source = https://github.com/canonical/rockcraft.git
    Issues = https://github.com/canonical/rockcraft/issues
author = Canonical Ltd.
author_email = snapcraft@lists.snapcraft.io
license = GNU Lesser General Public License v3 (LGPLv3)
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.10
include_package_data = True
packages = find:
zip_safe = False
install_requires =
    craft-application>=4.0.0
    craft-archives>=2.0.0
    craft-cli
    craft-parts>=2.0.0
    craft-providers>=2.0.0
    overrides
    spdx-lookup
    tabulate>=0.8.10

[options.entry_points]
console_scripts =
    rockcraft = rockcraft.cli:run

[options.package_data]
rockcraft = py.typed

[options.extras_require]
doc =
    canonical-sphinx
    sphinx-autobuild
    sphinx-autodoc-typehints
    sphinxcontrib-details-directive
    sphinx-lint
    sphinx-toolbox
    pyspelling
release =
    twine
    wheel
test =
    mccabe<0.7.0   # to resolve version conflict
    coverage
    black
    codespell
    flake8>=4.0.1
    mypy
    pydocstyle
    pylint
    pylint-fixme-info
    pylint-pytest>=1.1.3
    pytest
    pytest-check>=2.0
    pytest-mock
    pytest-subprocess
    ruff==0.3.5
    tox
    types-requests
    types-setuptools
    types-pyyaml
    types-tabulate>=0.9.0.2
dev =
    autoflake
    %(doc)s
    %(release)s
    %(test)s

[options.packages.find]
exclude =
    tests
    tests.*

[bdist_wheel]
universal = 1

[codespell]
quiet-level = 3
skip = ./docs/_build,.direnv,.git,.mypy_cache,.pytest_cache,.venv,__pycache__,venv
ignore-words-list = warmup,buildd,astroid

[flake8]
exclude = .direnv .git .mypy_cache .pytest_cache .venv __pycache__ venv
max-line-length = 88
# E203 whitespace before ':'
# E501 line too long
extend-ignore = E203,E501

[autoflake]
remove-all-unused-imports=true
ignore-init-module-imports=true
recursive=true
in-place=true

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[pydocstyle]
# D105 Missing docstring in magic method (reason: magic methods already have definitions)
# D107 Missing docstring in __init__ (reason: documented in class docstring)
# D203 1 blank line required before class docstring (reason: pep257 default)
# D213 Multi-line docstring summary should start at the second line (reason: pep257 default)
# D215 Section underline is over-indented (reason: pep257 default)
ignore = D105, D107, D203, D213, D215
# Allow missing docstrings in methods that are overridden
ignore_decorators = override

[aliases]
test = pytest

[tool:pytest]
