[metadata]
name = rockcraft
version = attr: rockcraft.__version__
description="Create rocks"
long_description = file: README.rst
url = https://github.com/canonical/rockcraft
project_urls =
    Documentation = https://rockcraft.readthedocs.io/en/latest/
    Source = https://github.com/canonical/rockcraft.git
    Issues = https://github.com/canonical/rockcraft/issues
author = Canonical Ltd.
author_email = snapcraft@lists.snapcraft.io
license = GNU Lesser General Public License v3 (LGPLv3)
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.10
include_package_data = True
packages = find:
zip_safe = False
install_requires =
    craft-application>=4.0.0
    craft-archives>=2.0.0
    craft-cli
    craft-parts>=2.1.2
    craft-platforms~=0.3
    craft-providers>=2.0.4
    overrides
    spdx-lookup
    tabulate>=0.8.10

[options.entry_points]
console_scripts =
    rockcraft = rockcraft.cli:run

[options.package_data]
rockcraft = py.typed

[options.extras_require]
doc =
    canonical-sphinx[full]
    sphinx-autobuild
    sphinx-autodoc-typehints
    sphinxcontrib-details-directive
    sphinx-lint
    sphinx-toolbox
    pyspelling
release =
    twine
    wheel
test =
    mccabe<0.7.0   # to resolve version conflict
    coverage
    black
    codespell
    mypy
    pytest
    pytest-check>=2.0
    pytest-mock
    pytest-subprocess
    tox
    types-requests
    types-setuptools
    types-pyyaml
    types-tabulate>=0.9.0.2
dev =
    %(doc)s
    %(release)s
    %(test)s

[options.packages.find]
exclude =
    tests
    tests.*

[bdist_wheel]
universal = 1

[codespell]
quiet-level = 3
skip = ./docs/_build,.direnv,.git,.mypy_cache,.pytest_cache,.venv,__pycache__,venv
ignore-words-list = warmup,buildd,astroid

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[aliases]
test = pytest

[tool:pytest]
