[tool.poetry]
name = "hello"
version = "0.1"
description = "Simple project that says hello."
authors = ["The Starcraft team"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello = "hello.__main__:main"
